added changes to react-personal-portfolio folder

--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ a:hover {
   color: var(--color-white);
 }
 
-btn {
+.btn {
   width: max-content;
   display: inline-block;
   color: var(--color-primary);
